<resources>
    <string name="app_name">Store</string>
    <string name="action_cart">Cart</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="price">%.2f €</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="added_to_cart">%s added to cart</string>
    <string name="checkout_disclaimer">Prices for all promotions are seen at checkout</string>
    <string name="not_network">Please connect to the internet</string>

    <string name="general_error">Some error occurred</string>
    <string name="empty_msg">No products yet</string>
    <string name="order_summary">Order Summary</string>
    <string name="order_subtotal">Subtotal: </string>
    <string name="order_discount">Discount applied: </string>
    <string name="order_total">Total: </string>
    <string name="place_order">Place Order</string>
    <string name="cancel_order">Cancel</string>
    <string name="order_placed">Thanks for your purchase!</string>
    <string name="order_canceled">Your order was canceled</string>
    <string name="item_added_to_cart">%s was added to your cart</string>
    <plurals name="discount_summary">
        <item quantity="one">* %d discount: %s was applied on item: %s</item>
        <item quantity="other">* %d discounts: %s were applied on the following items: %s</item>
    </plurals>
</resources>